--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "scripts": {
     "dev": "nodemon src/server/server.ts -w src/server",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "db:migrate": "knex migrate:latest"
   },
   "dependencies": {
     "express": "^4.18.2",
+    "knex": "^2.4.2",
+    "pg": "^8.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "vite-express": "^0.4.2"
@@ -19,6 +22,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
+    "knex-types": "^0.5.0",
     "nodemon": "^2.0.21",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3",
