--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "nodemon src/server/server.ts -w src/server",
+    "start": "NODE_ENV=production ts-node src/server/server.ts",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "db:migrate": "knex migrate:latest"
