--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "NODE_ENV=production ts-node src/server/server.ts",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "db:migrate": "knex migrate:latest"
+    "db:migrate": "knex migrate:latest",
+    "prepare": "husky install"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -18,15 +19,32 @@
     "vite-express": "^0.4.2"
   },
   "devDependencies": {
+    "@axe-core/react": "^4.6.0",
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.55.0",
+    "@typescript-eslint/parser": "^5.55.0",
     "@vitejs/plugin-react": "^3.1.0",
+    "eslint": "^8.36.0",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "husky": "^8.0.0",
     "knex-types": "^0.5.0",
+    "lint-staged": "^13.2.0",
     "nodemon": "^2.0.21",
+    "prettier": "^2.8.4",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "prettier --write",
+      "eslint --fix"
+    ],
+    "*.json": [
+      "prettier --write"
+    ]
   }
 }
