--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "db:migrate": "knex migrate:latest",
-    "prepare": "husky install"
+    "db:rollback": "knex migrate:rollback",
+    "db:create_migration": "knex migrate:make",
+    "prepare": "husky install",
+    "test": "jest"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "knex": "^2.4.2",
+    "luxon": "^3.3.0",
     "pg": "^8.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -20,23 +25,29 @@
   },
   "devDependencies": {
     "@axe-core/react": "^4.6.0",
+    "@babel/core": "^7.21.3",
+    "@babel/preset-typescript": "^7.21.0",
+    "@jest/globals": "^29.5.0",
     "@types/express": "^4.17.17",
-    "@types/node": "^18.15.3",
+    "@types/luxon": "^3.2.0",
+    "@types/node": "^18.15.5",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.55.0",
-    "@typescript-eslint/parser": "^5.55.0",
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "@typescript-eslint/parser": "^5.56.0",
     "@vitejs/plugin-react": "^3.1.0",
     "eslint": "^8.36.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
-    "husky": "^8.0.0",
+    "husky": "^8.0.3",
+    "jest": "^29.5.0",
     "knex-types": "^0.5.0",
     "lint-staged": "^13.2.0",
     "nodemon": "^2.0.21",
-    "prettier": "^2.8.4",
+    "prettier": "^2.8.6",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.3",
-    "vite": "^4.2.0"
+    "typescript": "^4.9.5",
+    "vite": "^4.2.1"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
