--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "argon2": "^0.30.3",
+    "axios": "^1.3.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-jwt": "^8.4.1",
+    "jsonwebtoken": "^9.0.0",
     "knex": "^2.4.2",
     "luxon": "^3.3.0",
     "pg": "^8.10.0",
@@ -29,6 +33,7 @@
     "@babel/preset-typescript": "^7.21.0",
     "@jest/globals": "^29.5.0",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/luxon": "^3.2.0",
     "@types/node": "^18.15.5",
     "@types/react": "^18.0.28",
@@ -36,6 +41,8 @@
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "@vitejs/plugin-react": "^3.1.0",
+    "argon2-cli": "^0.25.1",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.36.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "husky": "^8.0.3",
@@ -43,7 +50,9 @@
     "knex-types": "^0.5.0",
     "lint-staged": "^13.2.0",
     "nodemon": "^2.0.21",
+    "postcss": "^8.4.23",
     "prettier": "^2.8.6",
+    "tailwindcss": "^3.3.1",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
