--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "pg": "^8.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.10.0",
     "vite-express": "^0.4.2"
   },
   "devDependencies": {
