--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "db:migrate": "knex migrate:latest",
     "db:rollback": "knex migrate:rollback",
     "db:create_migration": "knex migrate:make",
-    "prepare": "husky install",
     "test": "jest"
   },
   "dependencies": {
@@ -27,7 +26,8 @@
     "react-dom": "^18.2.0",
     "react-router": "^6.10.0",
     "react-router-dom": "^6.10.0",
-    "vite-express": "^0.4.2"
+    "vite-express": "^0.4.2",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@axe-core/react": "^4.6.0",
@@ -57,7 +57,6 @@
     "prettier": "^2.8.6",
     "tailwindcss": "^3.3.1",
     "ts-jest": "^29.0.5",
-    "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
     "vite": "^4.2.1"
   },
