--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -6,5 +6,6 @@
     "moduleResolution": "Node",
     "allowSyntheticDefaultImports": true
   },
-  "include": ["vite.config.ts", "src/server/**/*.ts", "scripts/*.ts"]
+  "include": ["vite.config.ts", "src/server/**/*.ts"]
+  //"scripts/*.ts"]
 }
