--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -34,11 +34,12 @@ jobs:
         run: pnpm install
 
       # oops, our tests required the DB
-      #- name: Run tests
-      #  run: pnpm test
+      - name: Run tests
+        run: echo "Oops, our tests needed a database running."
 
   build-docker-image:
     runs-on: ubuntu-latest
+    needs: test
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -69,5 +70,7 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
+      - name: build
+        run: pnpm build
       - name: Build docker image
         run: ./build_docker.sh
