See if we got the format right now

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -75,5 +75,5 @@ jobs:
         run: pnpm build
       - name: Build docker image
         env:
-          JWT_SECRET: { { secrets.JWT_SECRET } }
+          JWT_SECRET: ${{ secrets.JWT_SECRET }}
         run: ./build_docker.sh
